# opt_methods_sem_6

./: REPORT_REQ.md
lab1/: .gitignore  CMakeLists.txt  README.md  REPORT_REQ.md
lab1/source/: LinearTask.cpp  LinearTask.h  SlackFormTask.cpp  SlackFormTask.h  StandardTask.cpp  StandardTask.h  Task.cpp  Task.h  main.cpp
lab1/source/utility/: Matrix.h  custom_types.h  matrix_functions.h  print_matrix.cpp  print_matrix.h
lab1/tasks/: lab2.json  main.json  other.json
lab2/: CMakeLists.txt  README.md  task.data
lab2/source/: TransportTask.cpp  TransportTask.h  main.cpp
lab2/source/utility/: custom_types.h  incorrect_format_exception.h  print_table.cpp  print_table.h
lab2/tasks/: main.json  non_balanced.json
lab3/: CMakeLists.txt  README.md
lab3/results/: data.csv  func_values.csv  lab3.xlsx
lab3/source/: BaseTask.cpp  BaseTask.h  PlotTask.cpp  PlotTask.h  main.cpp
lab3/source/alg/: AlgsForExtremes.cpp  AlgsForExtremes.h  FunctionWrapper.h
